# no.1-production-ready-nl2sql

./: .gitignore  AGENTS.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config_audit.py  main.py  readiness.py  settings.py
backend/app/api/: concurrency.py  health.py  models.py  router.py
backend/app/cli/: __init__.py  app_security_migrate.py  config_audit.py  nl2sql_migrate_state.py  nl2sql_quality_evaluation_worker.py  nl2sql_schema_refresh_worker.py  (+1 more)
backend/migrations/: 000_system_schema_control.sql  001_ontology_store.sql  002_ontology_semantics.sql  003_incremental_nl2sql_state.sql  004_app_security_rbac.sql  005_feedback_classifier_learning.sql  005_security_namespace_nl2sql.sql  006_incremental_job_leases.sql  007_profile_ontology_lifecycle.sql  008_quality_evaluation_jobs.sql
backend/scripts/: README.md  nl2sql_manual_integration.py  verify_system_schema_oracle.py
backend/tests/: conftest.py  test_async_route_concurrency_contract.py  test_config_audit.py  test_database_persistence.py  test_deepsec.py  test_health.py  test_nl2sql_cross_schema.py  test_nl2sql_cross_schema_integration.py  test_nl2sql_db_admin_management.py  test_nl2sql_embedding_client.py  test_nl2sql_feedback_classifier_learning.py  test_nl2sql_incremental_state.py  test_nl2sql_legacy_absorption.py  test_nl2sql_manual_integration.py  test_nl2sql_object_visibility.py  test_nl2sql_ontology_build.py  test_nl2sql_ontology_catalog.py  test_nl2sql_ontology_core.py  test_nl2sql_ontology_foundation.py  test_nl2sql_ontology_interchange.py  test_nl2sql_ontology_mermaid.py  test_nl2sql_ontology_router.py  test_nl2sql_ontology_semantics.py  test_nl2sql_ontology_sources.py  test_nl2sql_ontology_store.py  test_nl2sql_ontology_worker.py  test_nl2sql_oracle_lob.py  test_nl2sql_profile_lifecycle.py  test_nl2sql_profile_sync.py  test_nl2sql_quality_evaluation.py  test_recommend_confidence.py  test_security.py  test_settings_api.py  test_system_schema_manager.py
(+251 files in other folders)
